hphp/test/zend/bad/ext-spl/SplFileObject_key_basic.php
<?php
//line 2
//line 3
//line 4
//line 5
$s = new SplFileObject(__FILE__);

$s->seek(3);
echo $s->key();
?>